[gd_scene load_steps=7 format=3 uid="uid://ctai3uf0ytu67"]

[ext_resource type="Texture2D" uid="uid://dto0dugv7c7el" path="res://textures/rocky-dunes1-bl/rocky-dunes1_albedo.png" id="1_emcfo"]
[ext_resource type="Script" path="res://lobby/Lobby.gd" id="1_ugqrq"]
[ext_resource type="Theme" uid="uid://ctly6v5xdcdqo" path="res://ui/Theme.tres" id="2_bv8y4"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_372o4"]
albedo_texture = ExtResource("1_emcfo")
uv1_triplanar = true

[sub_resource type="Environment" id="Environment_xww1p"]

[sub_resource type="BoxShape3D" id="BoxShape3D_dmtd7"]
size = Vector3(8.78439, 1, 8.56184)

[node name="Lobby" type="Node3D"]
script = ExtResource("1_ugqrq")

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.41856, 0, 0, 0, 1, 0, 0, 0)
use_collision = true
size = Vector3(13.9984, 1, 11.708)
material = SubResource("StandardMaterial3D_372o4")

[node name="Players" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 7)

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://player/Player.tscn", "res://animated-characters/Clara/Clara.tscn", "res://animated-characters/Kaya/Kaya.tscn")
spawn_path = NodePath("../Players")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_bv8y4")

[node name="StartGame" type="Button" parent="CanvasLayer/Control"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.5
offset_top = -45.0
offset_right = 80.5
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
text = "Start Game"

[node name="Host_Join" type="PanelContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.5
offset_top = -22.5
offset_right = 68.5
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/Host_Join"]
layout_mode = 2

[node name="Host" type="Button" parent="CanvasLayer/Control/Host_Join/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Host"

[node name="Join" type="Button" parent="CanvasLayer/Control/Host_Join/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Join"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_xww1p")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.216, 1.55935)

[node name="SpawnArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="SpawnArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.05177)
shape = SubResource("BoxShape3D_dmtd7")

[connection signal="pressed" from="CanvasLayer/Control/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Host_Join/HBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Host_Join/HBoxContainer/Join" to="." method="_on_join_pressed"]
